added one publication

--- a/content/publication/journal-article/cite.bib
+++ b/content/publication/journal-article/cite.bib
@@ -1,8 +1,10 @@
-@article{example2,
-  title = {An example journal article},
-  author={Bighetti, Nelson and Ford, Robert},
-  journal = {Journal of Source Themes},
-  year    = 2015,
-  volume  = 1,
-  number  = 1
+@article{velez2013pooling,
+  title={Pooling/bootstrap-based GWAS (pb GWAS) identifies new loci modifying the age of onset in PSEN1 p. Glu280Ala Alzheimer's disease},
+  author={V{\'e}lez, Jorge I and Chandrasekharappa, Settara C and Henao, E and Martinez, Ariel F and Harper, U and Jones, Marypat and Solomon, Benjamin D and Lopez, L and Garcia, Gloria and Aguirre-Acevedo, DC and others},
+  journal={Molecular psychiatry},
+  volume={18},
+  number={5},
+  pages={568--575},
+  year={2013},
+  publisher={Nature Publishing Group}
 }
